More CSS refactoring, overflow-x fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,8 +22,6 @@
 
 * {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
 }
 
 html,
@@ -43,10 +41,32 @@ h2 {
   font-family: var(--secondary-poppins);
 }
 
+p {
+  font-family: var(--secondary-poppins);
+  font-size: 1.7em;
+  padding-bottom: 1.6em;
+}
+
 nav {
   display: flex;
   justify-content: center;
   background-color: white;
+}
+
+section {
+  min-height: 90vh;
+  width: 100%;
+  max-width: 100vw;
+  overflow: hidden;
+}
+
+section ol,
+section ul {
+  font-family: var(--secondary-poppins);
+}
+
+section li {
+  margin-bottom: 10px;
 }
 
 footer {
@@ -54,8 +74,8 @@ footer {
   background-color: var(--secondary-green);
   color: white;
   max-width: 100vw;
-  height: 80vh;
+  min-height: 80vh;
   margin-bottom: 0%;
-  padding-top: 1.5rem;
+  padding: 1.5rem 0rem;
   overflow: hidden;
 }
